--- a/Notes.APP/Notes.APP/MainWindow.xaml
+++ b/Notes.APP/Notes.APP/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="Notes.APP.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:local="clr-namespace:Notes.APP.CustomCtrls"
     xmlns:tb="http://www.hardcodet.net/taskbar"
@@ -14,7 +15,6 @@
     Background="Transparent"
     ContentRendered="Window_ContentRendered"
     Loaded="Window_Loaded"
-    Opacity="{Binding Opacity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
     PreviewKeyDown="Window_PreviewKeyDown"
     ShowInTaskbar="False"
     WindowStartupLocation="CenterScreen"
@@ -84,6 +84,7 @@
                 <Border
                     Grid.Row="0"
                     Height="40"
+                    HorizontalAlignment="Stretch"
                     VerticalAlignment="Top"
                     Background="{Binding BackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     BorderBrush="#bfc1be"
@@ -145,19 +146,9 @@
                             HorizontalAlignment="Right"
                             VerticalAlignment="Center"
                             Orientation="Horizontal">
-                            <Grid Height="30">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="30" />
-                                    <ColumnDefinition Width="30" />
-                                    <ColumnDefinition Width="30" />
-                                    <ColumnDefinition Width="30" />
-                                </Grid.ColumnDefinitions>
+                            <UniformGrid Height="30" Rows="1">
                                 <Button
                                     x:Name="btnFixed"
-                                    Grid.Column="0"
-                                    Width="30"
-                                    Height="30"
-                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="Fix_Click"
@@ -166,10 +157,6 @@
                                     FontSize="18"
                                     Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <Button
-                                    Grid.Column="1"
-                                    Width="30"
-                                    Height="30"
-                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="More_Click"
@@ -180,10 +167,6 @@
                                 <!--  折叠按钮  -->
                                 <Button
                                     Name="btnCollapse"
-                                    Grid.Column="2"
-                                    Width="30"
-                                    Height="30"
-                                    Padding="0"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Background="Transparent"
@@ -195,10 +178,6 @@
                                     Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <!--  最小化按钮  -->
                                 <Button
-                                    Grid.Column="3"
-                                    Width="30"
-                                    Height="30"
-                                    Padding="0"
                                     Background="Transparent"
                                     BorderThickness="0"
                                     Click="MinimizeButton_Click"
@@ -207,18 +186,18 @@
                                     Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 <!--  关闭按钮  -->
                                 <!--<Button
-                                    Grid.Column="3"
-                                    Width="30"
-                                    Height="30"
-                                    Background="Transparent"
-                                    BorderThickness="0"
-                                    Click="CloseButton_Click"
-                                    Content="&#xE8BB;"
-                                    FontFamily="Segoe MDL2 Assets"
-                                    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
+    Grid.Column="3"
+    Width="30"
+    Height="30"
+    Background="Transparent"
+    BorderThickness="0"
+    Click="CloseButton_Click"
+    Content="&#xE8BB;"
+    FontFamily="Segoe MDL2 Assets"
+    Foreground="{Binding Color, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
 
 
-                            </Grid>
+                            </UniformGrid>
 
                         </StackPanel>
                     </Grid>
@@ -241,6 +220,7 @@
                         <Border ClipToBounds="True" CornerRadius="20">
                             <Frame
                                 x:Name="MainFrame"
+                                MinHeight="100"
                                 HorizontalAlignment="Stretch"
                                 VerticalAlignment="Stretch"
                                 BorderBrush="Transparent"
@@ -329,12 +309,11 @@
                     x:Name="DrawerPanel"
                     Grid.Row="1"
                     Width="150"
-                    Height="250"
+                    Height="220"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
                     Background="#f8f8f8"
                     BorderThickness="1"
-                    Opacity="0.8"
                     Visibility="Collapsed">
                     <Border.CornerRadius>
                         <CornerRadius
@@ -352,8 +331,8 @@
                             <RowDefinition Height="20" />
                             <RowDefinition Height="25" />
                             <RowDefinition Height="*" />
-                            <RowDefinition Height="40" />
-                            <RowDefinition Height="40" />
+                            <RowDefinition Height="30" />
+                            <RowDefinition Height="30" />
                         </Grid.RowDefinitions>
                         <TextBlock
                             Grid.Row="0"
@@ -394,8 +373,8 @@
                             Grid.Row="5"
                             Maximum="1"
                             Minimum="0.1"
-                            SizeChanged="PreviewSlider_SizeChanged"
-                            Value="{Binding Opacity}" />
+                            ValueChanged="PreviewSlider_SizeChanged"
+                            Value="{Binding Opacity, Mode=TwoWay}" />
                         <!--<Slider
                             Grid.Row="5"
                             Width="130"
