置顶，固定桌面

--- a/Notes.APP/Notes.APP/CustomCtrls/ConfirmPopup.xaml
+++ b/Notes.APP/Notes.APP/CustomCtrls/ConfirmPopup.xaml
@@ -19,12 +19,13 @@
                 Background="White"
                 BorderBrush="Gray"
                 BorderThickness="1"
-                CornerRadius="15">
+                CornerRadius="8">
                 <StackPanel Orientation="Vertical">
                     <TextBlock
                         x:Name="messageIcon"
                         Margin="0,0,5,0"
-                        FontSize="16" />
+                        FontSize="16"
+                        Visibility="Hidden" />
                     <TextBlock
                         x:Name="messageText"
                         HorizontalAlignment="Center"
@@ -41,11 +42,11 @@
                             x:Name="confirmButton"
                             Width="80"
                             Margin="5"
-                            Background="LightGreen"
+                            Background="#87CEFA"
                             BorderBrush="Transparent"
                             BorderThickness="0"
                             Content="确定"
-                            Foreground="Black">
+                            Foreground="White">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
@@ -53,7 +54,7 @@
                                         Background="{TemplateBinding Background}"
                                         BorderBrush="{TemplateBinding BorderBrush}"
                                         BorderThickness="0"
-                                        CornerRadius="8">
+                                        CornerRadius="4">
                                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                                     </Border>
                                 </ControlTemplate>
@@ -65,14 +66,14 @@
                             Margin="5"
                             Background="LightGray"
                             Content="取消"
-                            Foreground="Black">
+                            Foreground="White">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border
                                         Background="{TemplateBinding Background}"
                                         BorderBrush="{TemplateBinding BorderBrush}"
                                         BorderThickness="0"
-                                        CornerRadius="8">
+                                        CornerRadius="4">
                                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                                     </Border>
                                 </ControlTemplate>
