--- a/Notes.APP/Notes.APP/Pages/ListPage.xaml
+++ b/Notes.APP/Notes.APP/Pages/ListPage.xaml
@@ -60,12 +60,21 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border
-                        Margin="8,0"
+                        Margin="8,2"
                         VerticalAlignment="Center"
                         BorderBrush="{Binding BackgroundColor}"
                         BorderThickness="0"
                         CornerRadius="5">
-
+                        <Border.Style>
+                            <Style TargetType="Border">
+                                <Setter Property="Background" Value="Transparent" />
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsTopUp}" Value="True">
+                                        <Setter Property="Background" Value="#33F5F5F5" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -148,8 +157,9 @@
             <!--  右键菜单  -->
             <ListView.ContextMenu>
                 <!--  打开菜单项  -->
-                <ContextMenu>
+                <ContextMenu Opened="NoteContextMenu_Opened">
                     <MenuItem
+                        x:Name="btnTopUp"
                         Click="IsTopUpMenuItem_Click"
                         Foreground="White"
                         Header="置顶">
@@ -164,11 +174,13 @@
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem
+                        x:Name="btnFixed"
                         Click="FixedMenuItem_Click"
                         Foreground="White"
                         Header="固定桌面">
                         <MenuItem.Icon>
                             <TextBlock
+                                x:Name="iconFixed"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center"
                                 FontFamily="Segoe MDL2 Assets"
