--- a/Notes.APP/Notes.APP/Pages/ListPage.xaml
+++ b/Notes.APP/Notes.APP/Pages/ListPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:local="clr-namespace:Notes.APP.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:pg="clr-namespace:Notes.APP.Models"
     Title="ListPage"
@@ -19,6 +20,9 @@
             <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
             <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         </Style>
+        <local:TopHeaderConverter x:Key="TopHeaderConverter" />
+        <local:FixedHeaderConverter x:Key="FixedHeaderConverter" />
+        <local:FixedIconHeaderConverter x:Key="FixedIconHeaderConverter" />
 
     </Page.Resources>
 
@@ -53,6 +57,16 @@
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
+                    <!--<Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu DataContext="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource Self}}">
+                                <MenuItem
+                                    Command="{Binding DataContext.TopUpCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                                    CommandParameter="{Binding}"
+                                    Header="置顶" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>-->
                 </Style>
             </ListView.ItemContainerStyle>
             <!--  绑定的数据项使用的模板  -->
@@ -72,9 +86,149 @@
                                     <DataTrigger Binding="{Binding IsTopUp}" Value="True">
                                         <Setter Property="Background" Value="#33F5F5F5" />
                                     </DataTrigger>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#26F5F5F5" />
+                                        <!--  鼠标悬浮背景色  -->
+                                    </Trigger>
                                 </Style.Triggers>
                             </Style>
+
                         </Border.Style>
+                        <Border.ContextMenu>
+                            <ContextMenu Opened="NoteContextMenu_Opened">
+                                <MenuItem
+                                    x:Name="btnTopUp"
+                                    Click="IsTopUpMenuItem_Click"
+                                    Foreground="White">
+                                    <MenuItem.Header>
+                                        <Binding Converter="{StaticResource TopHeaderConverter}" Path="IsTopUp" />
+                                    </MenuItem.Header>
+                                    <MenuItem.Icon>
+                                        <TextBlock
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="Center"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            FontSize="16"
+                                            Foreground="White"
+                                            Text="&#xE898;" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                <MenuItem
+                                    x:Name="btnFixed"
+                                    Click="FixedMenuItem_Click"
+                                    Foreground="White">
+                                    <MenuItem.Header>
+                                        <Binding Converter="{StaticResource FixedHeaderConverter}" Path="Fixed" />
+                                    </MenuItem.Header>
+                                    <MenuItem.Icon>
+                                        <TextBlock
+                                            x:Name="iconFixed"
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="Center"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            FontSize="16"
+                                            Foreground="White"
+                                            Text="{Binding Fixed, Converter={StaticResource FixedIconHeaderConverter}}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+
+                                <MenuItem
+                                    Click="EditMenuItem_Click"
+                                    Foreground="White"
+                                    Header="详情">
+                                    <MenuItem.Icon>
+                                        <TextBlock
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="Center"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            FontSize="16"
+                                            Foreground="White"
+                                            Text="&#xEE92;" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                <MenuItem
+                                    Click="DeleteMenuItem_Click"
+                                    Foreground="#fb300e"
+                                    Header="删除">
+                                    <MenuItem.Icon>
+                                        <TextBlock
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="Center"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            FontSize="16"
+                                            Foreground="#fb300e"
+                                            Text="&#xE74D;" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                <!--  添加样式  -->
+                                <ContextMenu.Style>
+                                    <Style TargetType="ContextMenu">
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="ContextMenu">
+                                                    <Border
+                                                        Padding="2"
+                                                        Background="#CC696969"
+                                                        BorderBrush="Gray"
+                                                        BorderThickness="1"
+                                                        CornerRadius="4">
+                                                        <StackPanel>
+                                                            <ItemsPresenter />
+                                                        </StackPanel>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+
+                                </ContextMenu.Style>
+                                <ContextMenu.ItemContainerStyle>
+                                    <Style TargetType="MenuItem">
+                                        <!--<Setter Property="Padding" Value="10,5,10,5" />-->
+                                        <!--  给内容适当的Padding  -->
+                                        <Setter Property="Margin" Value="0" />
+                                        <Setter Property="HorizontalContentAlignment" Value="Left" />
+                                        <Setter Property="VerticalContentAlignment" Value="Center" />
+                                        <Setter Property="Cursor" Value="Hand" />
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="MenuItem">
+                                                    <Border
+                                                        Height="30"
+                                                        Background="Transparent"
+                                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                                        BorderThickness="1"
+                                                        CornerRadius="4">
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <!--  图标显示  -->
+                                                            <ContentPresenter
+                                                                Margin="5,0"
+                                                                HorizontalAlignment="Left"
+                                                                VerticalAlignment="Center"
+                                                                Content="{TemplateBinding Icon}" />
+                                                            <!--  文本显示  -->
+                                                            <ContentPresenter
+                                                                Margin="5"
+                                                                HorizontalAlignment="Left"
+                                                                VerticalAlignment="Center"
+                                                                Content="{TemplateBinding Header}" />
+                                                        </StackPanel>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Style.Triggers>
+                                            <!--  设置悬浮时背景色变化  -->
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="red" />
+                                                <Setter Property="Foreground" Value="Black" />
+                                                <Setter Property="BorderBrush" Value="LightBlue" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </ContextMenu.ItemContainerStyle>
+                            </ContextMenu>
+                        </Border.ContextMenu>
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -102,8 +256,7 @@
                                     Margin="5"
                                     Background="#1A000000"
                                     BorderBrush="Gray"
-                                    Checked="CheckBox_Checked"
-                                    IsChecked="{Binding StatusTag, Mode=TwoWay}"
+                                    IsChecked="{Binding StatusTag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     PreviewMouseDoubleClick="CheckBox_PreviewMouseDoubleClick" />
                                 <TextBlock
                                     x:Name="txtNoteName"
@@ -146,7 +299,7 @@
                             <Border
                                 Grid.Row="1"
                                 Height="1"
-                                Margin="0,0,0,0"
+                                Margin="2,0,2,0"
                                 Background="Gray" />
                         </Grid>
                     </Border>
@@ -155,8 +308,7 @@
 
 
             <!--  右键菜单  -->
-            <ListView.ContextMenu>
-                <!--  打开菜单项  -->
+            <!--<ListView.ContextMenu>
                 <ContextMenu Opened="NoteContextMenu_Opened">
                     <MenuItem
                         x:Name="btnTopUp"
@@ -218,7 +370,9 @@
                                 Text="&#xE74D;" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    <!--  添加样式  -->
+            -->
+            <!--  添加样式  -->
+            <!--
                     <ContextMenu.Style>
                         <Style TargetType="ContextMenu">
                             <Setter Property="Template">
@@ -242,8 +396,10 @@
                     </ContextMenu.Style>
                     <ContextMenu.ItemContainerStyle>
                         <Style TargetType="MenuItem">
-                            <!--<Setter Property="Padding" Value="10,5,10,5" />-->
-                            <!--  给内容适当的Padding  -->
+            -->
+            <!--<Setter Property="Padding" Value="10,5,10,5" />-->
+            <!--  给内容适当的Padding  -->
+            <!--
                             <Setter Property="Margin" Value="0" />
                             <Setter Property="HorizontalContentAlignment" Value="Left" />
                             <Setter Property="VerticalContentAlignment" Value="Center" />
@@ -258,13 +414,17 @@
                                             BorderThickness="1"
                                             CornerRadius="4">
                                             <StackPanel Orientation="Horizontal">
-                                                <!--  图标显示  -->
+            -->
+            <!--  图标显示  -->
+            <!--
                                                 <ContentPresenter
                                                     Margin="5,0"
                                                     HorizontalAlignment="Left"
                                                     VerticalAlignment="Center"
                                                     Content="{TemplateBinding Icon}" />
-                                                <!--  文本显示  -->
+            -->
+            <!--  文本显示  -->
+            <!--
                                                 <ContentPresenter
                                                     Margin="5"
                                                     HorizontalAlignment="Left"
@@ -276,7 +436,9 @@
                                 </Setter.Value>
                             </Setter>
                             <Style.Triggers>
-                                <!--  设置悬浮时背景色变化  -->
+            -->
+            <!--  设置悬浮时背景色变化  -->
+            <!--
                                 <Trigger Property="IsMouseOver" Value="True">
                                     <Setter Property="Background" Value="red" />
                                     <Setter Property="Foreground" Value="Black" />
@@ -286,7 +448,7 @@
                         </Style>
                     </ContextMenu.ItemContainerStyle>
                 </ContextMenu>
-            </ListView.ContextMenu>
+            </ListView.ContextMenu>-->
         </ListView>
     </Grid>
 </pg:BasePage>
